<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerInParent="true">
        <RelativeLayout
                android:layout_width="@dimen/switch_width"
                android:layout_height="@dimen/switch_track_height"
                android:background="@drawable/switch_track_back"
                android:layout_centerHorizontal="true">

            <TextView
                    android:id="@+id/left_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/switch_track_height"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:text="@string/male"/>

            <TextView
                    android:id="@+id/right_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/switch_track_height"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:textSize="15dp"
                    android:visibility="gone"
                    android:text="@string/female"/>
        </RelativeLayout>

        <Switch
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/male"
                android:textOn="@string/female"
                android:showText="true"
                android:textSize="19dp"
                android:switchMinWidth="@dimen/switch_width"
                android:checked="false"
                android:textColor="@android:color/white"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:layout_centerHorizontal="true"/>


        <RelativeLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/spinnerAgeParent"
                android:layout_width="@dimen/switch_width"
                android:layout_height="@dimen/switch_track_height"
                android:layout_below="@id/switchButton"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:background="@drawable/red_btn_cta">
            <TextView
                    android:id="@+id/tvAge"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Age"
                    android:textSize="15dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/switch_track_height"/>
            <RelativeLayout
                    android:id="@+id/rlSpinnerParent"
                    android:layout_toRightOf="@id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/switch_track_height"
                    android:layout_alignParentRight="true">
                <ImageView
                        android:id="@+id/ivArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:layout_marginRight="2dp"
                        android:src="@drawable/arrow"/>
                <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/switch_track_height"
                        android:layout_marginLeft="25dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_toLeftOf="@id/ivArrow"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
        <RelativeLayout
                android:id="@+id/click"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/switch_track_height"
                android:background="@drawable/white_btn_cta">
            <TextView
                    android:layout_centerInParent="true"
                    android:text="@string/done_button"
                    android:textColor="@color/default_red"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@id/click">

            <TextView
                    android:id="@+id/tvByTapping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif"
                    android:textSize="14dp"
                    android:text="@string/by_tapping"
            />
            <TextView
                    android:id="@+id/tvByTapping_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvByTapping"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="2dp"
                    android:gravity="center"
                    android:textColor="@drawable/terms_selector"
                    android:textStyle="normal"
                    android:textSize="14dp"
                    android:text="@string/terms_cond"
            />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>