<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/settingsParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.4">
            <ImageView
                    android:id="@+id/settingsBackground"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/third_frag_background_female"
                    android:adjustViewBounds="true"/>
            <ImageView
                    android:src="#90ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|start"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center_horizontal">

                <RelativeLayout
                        android:id="@+id/rlBackParent"
                        android:layout_width="50dp"
                        android:background="@drawable/back_selector"
                        android:layout_height="?android:attr/actionBarSize">
                    <ImageView
                            android:layout_width="20dp"
                            android:layout_height="18dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:src="@drawable/back_arrow_black"/>
                </RelativeLayout>
                <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:textColor="@color/default_red"
                        android:textStyle="normal"
                        android:text="@string/app_name"
                        android:layout_marginTop="-3dp"
                        android:layout_below="@id/ivAppLogo"/>

            </LinearLayout>

            <RelativeLayout
                    android:id="@+id/rlSwitchAndSpinnerParent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                <RelativeLayout
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="@dimen/switch_track_height"
                        android:background="@drawable/switch_track_back">

                    <TextView
                            android:id="@+id/left_text"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/switch_track_height"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="14dp"
                            android:gravity="center"
                            android:textSize="15dp"
                            android:text="@string/male"/>

                    <TextView
                            android:id="@+id/right_text"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/switch_track_height"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="14dp"
                            android:gravity="center"
                            android:layout_alignParentRight="true"
                            android:textSize="15dp"
                            android:visibility="gone"
                            android:text="@string/female"/>
                </RelativeLayout>

                <Switch
                        android:id="@+id/switchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:switchMinWidth="@dimen/switch_width"
                        android:textOff="@string/male"
                        android:textOn="@string/female"
                        android:showText="true"
                        android:textSize="19dp"
                        android:checked="false"
                        android:textColor="@android:color/white"
                        android:thumb="@drawable/switch_thumb"
                        android:track="@drawable/switch_track"/>
                <RelativeLayout
                        android:id="@+id/spinnerAgeParent"
                        android:layout_width="@dimen/switch_width"
                        android:layout_height="@dimen/switch_track_height"
                        android:layout_below="@id/switchButton"
                        android:layout_marginTop="25dp"
                        android:padding="10dp"
                        android:background="@drawable/red_btn_cta">
                    <TextView
                            android:id="@+id/tvAge"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="Age"
                            android:textSize="15dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/switch_track_height"/>
                    <RelativeLayout
                            android:id="@+id/rlSpinnerParent"
                            android:layout_toRightOf="@id/tvAge"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/switch_track_height"
                            android:layout_alignParentRight="true">
                        <ImageView
                                android:id="@+id/ivArrow"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:layout_marginRight="2dp"
                                android:src="@drawable/arrow"/>
                        <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/switch_track_height"
                                android:layout_marginLeft="25dp"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:layout_toLeftOf="@id/ivArrow"
                                android:background="@android:color/transparent"
                                android:gravity="center"
                        />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="@dimen/switch_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="25dp">

                <RelativeLayout
                        android:id="@+id/rlNotifParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/limit_notif"
                            android:textColor="@color/settings_term_sep"
                            android:layout_alignParentLeft="true"/>

                    <ImageView
                            android:id="@+id/ivLimitNotif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/limit_toggle"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>
                </RelativeLayout>
                <View
                        android:id="@+id/sep"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/settings_term_sep"
                        android:layout_below="@id/rlNotifParent"
                        android:layout_marginTop="15dp"/>

                <RelativeLayout
                        android:id="@+id/rlTermsParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sep"
                        android:layout_marginTop="15dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_settings"
                            android:textColor="@color/settings_term_sep"
                            android:layout_alignParentLeft="true"/>

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/settings_terms_arrow"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"/>
                </RelativeLayout>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_below="@id/rlTermsParent"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/powered_inmobi"/>
            </RelativeLayout>
        </RelativeLayout>
        <ImageView
                android:id="@+id/big_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_weight="0.6"
        />
    </LinearLayout>
</RelativeLayout>

